--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@graphql-tools/schema": "^8.2.0",
     "apollo-server": "^3.4.0",
     "apollo-server-plugin-response-cache": "^3.3.0",
+    "argon2": "^0.28.2",
     "dotenv": "^10.0.0",
     "graphql": "^15.6.1",
+    "graphql-scalars": "^1.11.1",
     "knex": "^0.95.11",
     "knex-stringcase": "^1.4.6",
     "pg": "^8.7.1",
