--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.1",
+    "jest": "^27.2.5",
     "nodemon": "^2.0.13"
   }
 }
