--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "NODE_ENV=development nodemon --inspect ./index.js",
     "test": "npm run lint && npm run test:unit",
     "lint": "eslint .",
-    "test:unit": "NODE_ENV=test jest"
+    "test:unit": "NODE_ENV=test jest -i"
   },
   "author": "SevenCats <sevencats@tripsit.me>",
   "license": "MIT",
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.25.1",
     "eslint-plugin-jest": "^25.0.5",
     "jest": "^27.2.5",
+    "knex-cleaner": "^1.3.1",
     "nodemon": "^2.0.13"
   }
 }
