--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "apollo-server": "^3.4.0",
     "apollo-server-plugin-response-cache": "^3.3.0",
     "argon2": "^0.28.2",
+    "datasource-sql": "^1.6.0",
     "dotenv": "^10.0.0",
     "graphql": "^15.6.1",
     "graphql-scalars": "^1.11.1",
