--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
     "knex": "^0.95.11",
     "knex-stringcase": "^1.4.6",
     "pg": "^8.7.1",
+    "redis": "^3.1.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.1",
