--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "description": "GraphQL API for TripSit",
   "main": "./index.js",
   "scripts": {
-    "start": "node ./index.js",
-    "dev": "nodemon --inspect ./index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "NODE_ENV=production node ./index.js",
+    "dev": "NODE_ENV=development nodemon --inspect ./index.js",
+    "test": "npm run lint && npm run test:unit",
+    "lint": "eslint .",
+    "test:unit": "NODE_ENV=test jest -i"
   },
   "author": "SevenCats <sevencats@tripsit.me>",
   "license": "MIT",
@@ -16,6 +18,7 @@
     "apollo-server": "^3.4.0",
     "apollo-server-plugin-response-cache": "^3.3.0",
     "argon2": "^0.28.2",
+    "datasource-sql": "^1.6.0",
     "dotenv": "^10.0.0",
     "graphql": "^15.6.1",
     "graphql-scalars": "^1.11.1",
@@ -28,6 +31,9 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.1",
+    "eslint-plugin-jest": "^25.0.5",
+    "jest": "^27.2.5",
+    "knex-cleaner": "^1.3.1",
     "nodemon": "^2.0.13"
   }
 }
