--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
   "license": "MIT",
   "dependencies": {
     "@graphql-tools/schema": "^8.2.0",
+    "apollo-datasource": "^3.3.0",
     "apollo-server": "^3.4.0",
     "apollo-server-plugin-response-cache": "^3.3.0",
     "argon2": "^0.28.2",
     "datasource-sql": "^1.6.0",
+    "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "graphql": "^15.6.1",
     "graphql-scalars": "^1.11.1",
@@ -28,6 +30,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "apollo-datasource-http": "^0.17.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.1",
