--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/eslint-parser": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
     "apollo-datasource-http": "^0.17.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
