--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "graphql-scalars": "^1.11.1",
     "knex": "^0.95.11",
     "knex-stringcase": "^1.4.6",
+    "luxon": "^2.1.1",
     "pg": "^8.7.1",
     "winston": "^3.3.3"
   },
