--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "npm run lint && npm run test:unit",
     "lint": "eslint .",
     "test:unit": "NODE_ENV=test jest -i",
+    "test:unit:debug": "node --inspect ./node_modules/.bin/jest -i --watchAll",
     "clean": "./scripts/clean.sh"
   },
   "author": "SevenCats <sevencats@tripsit.me>",
@@ -23,6 +24,7 @@
     "datasource-sql": "^1.6.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
+    "fake-tag": "^3.0.0",
     "graphql": "^15.6.1",
     "graphql-scalars": "^1.11.1",
     "knex": "^0.95.11",
@@ -41,7 +43,7 @@
     "eslint-plugin-import": "^2.25.1",
     "eslint-plugin-jest": "^25.0.5",
     "jest": "^27.2.5",
-    "knex-cleaner": "^1.3.1",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "regenerator-runtime": "^0.13.9"
   }
 }
