--- a/package.json
+++ b/package.json
@@ -18,15 +18,18 @@
   "dependencies": {
     "@graphql-tools/schema": "^8.2.0",
     "apollo-datasource": "^3.3.0",
-    "apollo-server": "^3.4.0",
+    "apollo-server-core": "^3.5.0",
+    "apollo-server-express": "^3.5.0",
     "apollo-server-plugin-response-cache": "^3.3.0",
     "argon2": "^0.28.2",
     "datasource-sql": "^1.6.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "fake-tag": "^3.0.0",
-    "graphql": "^15.6.1",
+    "graphql": "^15.7.2",
     "graphql-scalars": "^1.11.1",
+    "helmet": "^4.6.0",
     "knex": "^0.95.11",
     "knex-stringcase": "^1.4.6",
     "luxon": "^2.1.1",
