add express routes and sessions

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 HTTP_PORT=3000
 LOG_PATH=./logs
 
+SESSION_SECRET=changeme
+SESSION_MAX_AGE=10000
+SESSION_SECURE=false
+
 TS_API_TOKEN=IAMATOKEN
 
 POSTGRES_HOST=localhost
