--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
     "apollo-server-express": "^3.5.0",
     "apollo-server-plugin-response-cache": "^3.3.0",
     "argon2": "^0.28.2",
+    "connect-session-knex": "^2.1.1",
     "datasource-sql": "^1.6.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-joi-validation": "^5.0.0",
+    "express-promise-router": "^4.1.1",
+    "express-session": "^1.17.2",
     "fake-tag": "^3.0.0",
     "graphql": "^15.7.2",
     "graphql-scalars": "^1.11.1",
     "helmet": "^4.6.0",
+    "joi": "^17.5.0",
     "knex": "^0.95.11",
     "knex-stringcase": "^1.4.6",
     "luxon": "^2.1.1",
