--- a/package.json
+++ b/package.json
@@ -9,23 +9,34 @@
     "dev": "NODE_ENV=development nodemon --inspect ./index.js",
     "test": "npm run lint && npm run test:unit",
     "lint": "eslint .",
-    "test:unit": "NODE_ENV=test jest -i"
+    "test:unit": "NODE_ENV=test jest -i",
+    "test:unit:debug": "node --inspect ./node_modules/.bin/jest -i --watchAll",
+    "clean": "./scripts/clean.sh"
   },
   "author": "SevenCats <sevencats@tripsit.me>",
   "license": "MIT",
   "dependencies": {
     "@graphql-tools/schema": "^8.2.0",
     "apollo-datasource": "^3.3.0",
-    "apollo-server": "^3.4.0",
+    "apollo-server-core": "^3.5.0",
+    "apollo-server-express": "^3.5.0",
     "apollo-server-plugin-response-cache": "^3.3.0",
     "argon2": "^0.28.2",
-    "datasource-sql": "^1.6.0",
+    "connect-session-knex": "^2.1.1",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0",
-    "graphql": "^15.6.1",
+    "express": "^4.17.1",
+    "express-joi-validation": "^5.0.0",
+    "express-promise-router": "^4.1.1",
+    "express-session": "^1.17.2",
+    "fake-tag": "^3.0.0",
+    "graphql": "^15.7.2",
     "graphql-scalars": "^1.11.1",
+    "helmet": "^4.6.0",
+    "joi": "^17.5.0",
     "knex": "^0.95.11",
     "knex-stringcase": "^1.4.6",
+    "luxon": "^2.1.1",
     "pg": "^8.7.1",
     "winston": "^3.3.3"
   },
@@ -33,13 +44,12 @@
     "@babel/core": "^7.16.0",
     "@babel/eslint-parser": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
-    "apollo-datasource-http": "^0.17.1",
     "eslint": "^7.32.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.25.1",
     "eslint-plugin-jest": "^25.0.5",
     "jest": "^27.2.5",
-    "knex-cleaner": "^1.3.1",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "regenerator-runtime": "^0.13.9"
   }
 }
